---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/sequence_100.sql
snapshot_kind: text
---
CREATE SEQUENCE sequence_testx INCREMENT BY 0;

CREATE SEQUENCE sequence_testx INCREMENT BY -1 MINVALUE 20;

CREATE SEQUENCE sequence_testx INCREMENT BY 1 MAXVALUE -20;

CREATE SEQUENCE sequence_testx INCREMENT BY -1 START WITH 10;

CREATE SEQUENCE sequence_testx INCREMENT BY 1 START WITH -10;

CREATE SEQUENCE sequence_testx CACHE 0;

CREATE SEQUENCE sequence_testx OWNED BY nobody;

CREATE SEQUENCE sequence_testx OWNED BY pg_class_oid_index.oid;

CREATE SEQUENCE sequence_testx OWNED BY pg_class.relname;

CREATE TABLE sequence_test_table (a INT);

CREATE SEQUENCE sequence_testx OWNED BY sequence_test_table.b;

DROP TABLE "sequence_test_table";

CREATE SEQUENCE sequence_test5 AS INT;

CREATE SEQUENCE sequence_test6 AS SMALLINT;

CREATE SEQUENCE sequence_test7 AS BIGINT;

CREATE SEQUENCE sequence_test8 AS INT MAXVALUE 100000;

CREATE SEQUENCE sequence_test9 AS INT INCREMENT BY -1;

CREATE SEQUENCE sequence_test10 AS INT MINVALUE -100000 START WITH 1;

CREATE SEQUENCE sequence_test11 AS SMALLINT;

CREATE SEQUENCE sequence_test12 AS SMALLINT INCREMENT BY -1;

CREATE SEQUENCE sequence_test13 AS SMALLINT MINVALUE -32768;

CREATE SEQUENCE sequence_test14 AS SMALLINT MAXVALUE 32767 INCREMENT BY -1;

CREATE SEQUENCE sequence_testx AS TEXT;

CREATE SEQUENCE sequence_testx AS nosuchtype;

CREATE SEQUENCE sequence_testx AS SMALLINT MAXVALUE 100000;

CREATE SEQUENCE sequence_testx AS SMALLINT MINVALUE -100000;

ALTER SEQUENCE sequence_test5 AS SMALLINT;

ALTER SEQUENCE sequence_test8 AS SMALLINT;

ALTER SEQUENCE sequence_test8 AS SMALLINT MAXVALUE 20000;

ALTER SEQUENCE sequence_test9 AS SMALLINT;

ALTER SEQUENCE sequence_test10 AS SMALLINT;

ALTER SEQUENCE sequence_test10 AS SMALLINT MINVALUE -20000;

ALTER SEQUENCE sequence_test11 AS INT;

ALTER SEQUENCE sequence_test12 AS INT;

ALTER SEQUENCE sequence_test13 AS INT;

ALTER SEQUENCE sequence_test14 AS INT;

CREATE TABLE serialtest1 (f1 TEXT, f2 serial);

INSERT INTO serialtest1 VALUES ('foo');

INSERT INTO serialtest1 VALUES ('bar');

INSERT INTO serialtest1 VALUES ('force', 100);

INSERT INTO serialtest1 VALUES ('wrong', NULL);

SELECT * FROM serialtest1;

SELECT pg_get_serial_sequence('serialTest1', 'f2');

CREATE TABLE serialtest2 (f1 TEXT, f2 serial, f3 smallserial, f4 serial2, f5 bigserial, f6 serial8);

INSERT INTO serialtest2 (f1) VALUES ('test_defaults');

INSERT INTO serialtest2 (f1, f2, f3, f4, f5, f6)
VALUES
  (
    'test_max_vals',
    2147483647,
    32767,
    32767,
    9223372036854775807,
    9223372036854775807
  ),
  (
    'test_min_vals',
    -2147483648,
    -32768,
    -32768,
    -9223372036854775808,
    -9223372036854775808
  );

INSERT INTO serialtest2 (f1, f3) VALUES ('bogus', -32769);

INSERT INTO serialtest2 (f1, f4) VALUES ('bogus', -32769);

INSERT INTO serialtest2 (f1, f3) VALUES ('bogus', 32768);

INSERT INTO serialtest2 (f1, f4) VALUES ('bogus', 32768);

INSERT INTO serialtest2 (f1, f5) VALUES ('bogus', -9223372036854775809);

INSERT INTO serialtest2 (f1, f6) VALUES ('bogus', -9223372036854775809);

INSERT INTO serialtest2 (f1, f5) VALUES ('bogus', 9223372036854775808);

INSERT INTO serialtest2 (f1, f6) VALUES ('bogus', 9223372036854775808);

SELECT * FROM serialtest2 ORDER BY f2 ASC;

SELECT nextval('serialTest2_f2_seq');

SELECT nextval('serialTest2_f3_seq');

SELECT nextval('serialTest2_f4_seq');

SELECT nextval('serialTest2_f5_seq');

SELECT nextval('serialTest2_f6_seq');

CREATE SEQUENCE sequence_test;

CREATE SEQUENCE IF NOT EXISTS sequence_test;

SELECT nextval(CAST('sequence_test' AS TEXT));

SELECT nextval(CAST('sequence_test' AS REGCLASS));

SELECT currval(CAST('sequence_test' AS TEXT));

SELECT currval(CAST('sequence_test' AS REGCLASS));

SELECT setval(CAST('sequence_test' AS TEXT), 32);

SELECT nextval(CAST('sequence_test' AS REGCLASS));

SELECT setval(CAST('sequence_test' AS TEXT), 99, FALSE);

SELECT nextval(CAST('sequence_test' AS REGCLASS));

SELECT setval(CAST('sequence_test' AS REGCLASS), 32);

SELECT nextval(CAST('sequence_test' AS TEXT));

SELECT setval(CAST('sequence_test' AS REGCLASS), 99, FALSE);

SELECT nextval(CAST('sequence_test' AS TEXT));

DISCARD SEQUENCES;

SELECT currval(CAST('sequence_test' AS REGCLASS));

DROP SEQUENCE "sequence_test";

CREATE SEQUENCE foo_seq;

ALTER TABLE foo_seq RENAME TO foo_seq_new;

SELECT * FROM foo_seq_new;

SELECT nextval('foo_seq_new');

SELECT nextval('foo_seq_new');

SELECT last_value, log_cnt IN (31, 32) AS log_cnt_ok, is_called FROM foo_seq_new;

DROP SEQUENCE "foo_seq_new";

ALTER TABLE serialtest1_f2_seq RENAME TO serialtest1_f2_foo;

INSERT INTO serialtest1 VALUES ('more');

SELECT * FROM serialtest1;

CREATE TEMPORARY SEQUENCE myseq2;

CREATE TEMPORARY SEQUENCE myseq3;

CREATE TEMPORARY TABLE t1 (
  f1 serial,
  f2 INT DEFAULT nextval('myseq2'),
  f3 INT DEFAULT nextval(CAST('myseq3' AS TEXT))
);

DROP SEQUENCE "t1_f1_seq";

DROP SEQUENCE "myseq2";

DROP SEQUENCE "myseq3";

DROP TABLE "t1";

DROP SEQUENCE "t1_f1_seq";

DROP SEQUENCE "myseq2";

ALTER SEQUENCE IF EXISTS sequence_test2 RESTART;
